# OCTP

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: alembic.ini  config.py  logging.yaml  main.py
src/app/: __init__.py  admin.py  authentication.py  caching.py  context.py  database.py  enums.py  exceptions.py  handlers.py  http.py  internal.py  middlewares.py  openapi.py  pagination.py  repository.py  schemas.py  security.py  shortcuts.py  tools.py
src/migrations/: env.py
